--- a/audio/audiofx/Cargo.toml
+++ b/audio/audiofx/Cargo.toml
@@ -8,9 +8,9 @@ description = "Rust AudioFx Plugin"
 edition = "2018"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
+gst = { package = "gstreamer", version = "0.17", features = ["v1_16"] }
+gst-base = { package = "gstreamer-base", version = "0.17", features = ["v1_16"] }
+gst-audio = { package = "gstreamer-audio", version = "0.17", features = ["v1_16"] }
 byte-slice-cast = "1.0"
 num-traits = "0.2"
 once_cell = "1.0"
@@ -25,8 +25,8 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-check = { package = "gstreamer-check", version = "0.17", features = ["v1_18"] }
+gst-app = { package = "gstreamer-app", version = "0.17" }
 
 [build-dependencies]
 gst-plugin-version-helper = { path="../../version-helper" }
