--- a/audio/csound/Cargo.toml
+++ b/audio/csound/Cargo.toml
@@ -8,15 +8,15 @@ edition = "2018"
 description = "An Audio filter plugin based on Csound"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", version = "0.17" }
+gst-base = { package = "gstreamer-base", version = "0.17" }
+gst-audio = { package = "gstreamer-audio", version = "0.17" }
 csound = "0.1.8"
 once_cell = "1.0"
 byte-slice-cast = "1.0"
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-check = { package = "gstreamer-check", version = "0.17" }
 
 [lib]
 name = "gstcsound"
