--- a/audio/lewton/Cargo.toml
+++ b/audio/lewton/Cargo.toml
@@ -8,15 +8,15 @@ description = "lewton Vorbis Decoder Plugin"
 edition = "2018"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", version = "0.17" }
+gst-audio = { package = "gstreamer-audio", version = "0.17" }
 lewton = { version = "0.10", default-features = false }
 byte-slice-cast = "1.0"
 atomic_refcell = "0.1"
 once_cell = "1.0"
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-check = { package = "gstreamer-check", version = "0.17" }
 
 [lib]
 name = "gstlewton"
