--- a/generic/file/Cargo.toml
+++ b/generic/file/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2018"
 
 [dependencies]
 url = "2"
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", version = "0.17" }
+gst-base = { package = "gstreamer-base", version = "0.17" }
 once_cell = "1.0"
 
 [lib]
