--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -8,8 +8,8 @@ license = "MIT"
 edition = "2018"
 
 [dependencies]
-gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package="gstreamer" }
-gst-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package = "gstreamer-base" }
+gst = { version = "0.17", features = ["v1_14"], package="gstreamer" }
+gst-base = { version = "0.17", features = ["v1_14"], package = "gstreamer-base" }
 sodiumoxide = "0.2.1"
 once_cell = "1.3.0"
 hex = "0.4"
@@ -25,11 +25,11 @@ pretty_assertions = "0.7"
 rand = "0.8"
 
 [dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 package="gstreamer-check"
 
 [dev-dependencies.gst-app]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 package="gstreamer-app"
 
 [lib]
