--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2018"
 
 [dependencies]
 libc = "0.2"
-gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features=["v1_10"] }
-gst-net = { package = "gstreamer-net", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gio = { version = "0.14" }
+gst = { package = "gstreamer", version = "0.17", features=["v1_10"] }
+gst-net = { package = "gstreamer-net", version = "0.17" }
+gst-rtp = { package = "gstreamer-rtp", version = "0.17" }
 pin-project = "1"
 once_cell = "1"
 tokio = { git = "https://github.com/fengalin/tokio", tag = "tokio-0.2.13-throttling", features = ["io-util", "macros", "rt-core", "sync", "stream", "time", "tcp", "udp", "rt-util"] }
@@ -24,8 +24,8 @@ socket2 = {features = ["all"], version = "0.4"}
 winapi = { version = "0.3", features = ["winsock2", "processthreadsapi"] }
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-check = { package = "gstreamer-check", version = "0.17" }
+gst-app = { package = "gstreamer-app", version = "0.17" }
 
 [lib]
 name = "gstthreadshare"
