--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -13,8 +13,8 @@ reqwest = { version = "0.11", features = ["cookies", "gzip"] }
 futures = "0.3"
 hyperx = "1.0"
 mime = "0.3"
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", version = "0.17", features = ["v1_10"] }
+gst-base = { package = "gstreamer-base", version = "0.17" }
 tokio = { version = "1.0", default-features = false, features = ["time", "rt-multi-thread"] }
 once_cell = "1.0"
 
