--- a/text/json/Cargo.toml
+++ b/text/json/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
 
 [dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 features = ["v1_12"]
 package="gstreamer"
 
@@ -26,7 +26,7 @@ path = "src/lib.rs"
 gst-plugin-version-helper = { path="../../version-helper" }
 
 [dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 package="gstreamer-check"
 
 [features]
