--- a/text/regex/Cargo.toml
+++ b/text/regex/Cargo.toml
@@ -12,7 +12,7 @@ once_cell = "1.0"
 regex = "1"
 
 [dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 features = ["v1_14"]
 package="gstreamer"
 
@@ -25,7 +25,7 @@ path = "src/lib.rs"
 gst-plugin-version-helper = { path="../../version-helper" }
 
 [dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 package="gstreamer-check"
 
 [features]
