--- a/utils/togglerecord/Cargo.toml
+++ b/utils/togglerecord/Cargo.toml
@@ -8,11 +8,11 @@ repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 edition = "2018"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gtk = { git = "https://github.com/gtk-rs/gtk3-rs", optional = true }
-gio = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }
+gst = { package = "gstreamer", version = "0.17" }
+gst-audio = { package = "gstreamer-audio", version = "0.17" }
+gst-video = { package = "gstreamer-video", version = "0.17" }
+gtk = { version = "0.14", optional = true }
+gio = { version = "0.14", optional = true }
 parking_lot = "0.11"
 once_cell = "1.0"
 
