--- a/video/cdg/Cargo.toml
+++ b/video/cdg/Cargo.toml
@@ -8,9 +8,9 @@ description = "CDG Plugin"
 edition = "2018"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
+gst = { package = "gstreamer", version = "0.17", features = ["v1_12"] }
+gst-base = { package = "gstreamer-base", version = "0.17", features = ["v1_12"] }
+gst-video = { package = "gstreamer-video", version = "0.17", features = ["v1_12"] }
 cdg = "0.1"
 cdg_renderer = "0.6"
 image = { version = "0.23", default-features = false }
@@ -18,7 +18,7 @@ muldiv = "1.0"
 once_cell = "1.0"
 
 [dev-dependencies]
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-app = { package = "gstreamer-app", version = "0.17" }
 
 [lib]
 name = "gstcdg"
