--- a/video/closedcaption/Cargo.toml
+++ b/video/closedcaption/Cargo.toml
@@ -15,25 +15,25 @@ uuid = { version = "0.8", features = ["v4"] }
 chrono = "0.4"
 once_cell = "1.0"
 atomic_refcell = "0.1"
-cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
-pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }
-pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core" }
+cairo-rs = { version = "0.14", features=["use_glib"] }
+pango = { version = "0.14" }
+pangocairo = { version = "0.14" }
 byteorder = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
 
 [dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 features = ["v1_16"]
 package="gstreamer"
 
 [dependencies.gst-base]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 features = ["v1_16"]
 package="gstreamer-base"
 
 [dependencies.gst-video]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 features = ["v1_16"]
 package="gstreamer-video"
 
@@ -42,7 +42,7 @@ pretty_assertions = "0.7"
 rand = { version = "0.8", features = ["small_rng"] }
 
 [dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 package="gstreamer-check"
 
 [lib]
