--- a/video/gif/Cargo.toml
+++ b/video/gif/Cargo.toml
@@ -8,14 +8,14 @@ edition = "2018"
 description = "GStreamer GIF plugin"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", version = "0.17" }
+gst-video = { package = "gstreamer-video", version = "0.17" }
 gif = "0.11"
 atomic_refcell = "0.1"
 once_cell = "1"
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-check = { package = "gstreamer-check", version = "0.17" }
 
 [lib]
 name = "gstgif"
