--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -8,13 +8,13 @@ description = "rav1e AV1 Encoder Plugin"
 edition = "2018"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
+gst = { package = "gstreamer", version = "0.17" }
+gst-video = { package = "gstreamer-video", version = "0.17", features = ["v1_12"] }
 rav1e = { version = "0.4", default-features = false }
 once_cell = "1.0"
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-check = { package = "gstreamer-check", version = "0.17" }
 
 [lib]
 name = "gstrav1e"
