--- a/video/rspng/Cargo.toml
+++ b/video/rspng/Cargo.toml
@@ -8,15 +8,15 @@ edition = "2018"
 description = "An PNG encoder/decoder written in pure Rust"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst_video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", version = "0.17" }
+gst_video = { package = "gstreamer-video", version = "0.17" }
 png = "0.16.3"
 once_cell = "1"
 parking_lot = "0.11"
 atomic_refcell = "0.1"
 
 [dev-dependencies]
-gst_check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst_check = { package = "gstreamer-check", version = "0.17" }
 
 [lib]
 name = "gstrspng"
