--- a/video/webp/Cargo.toml
+++ b/video/webp/Cargo.toml
@@ -12,12 +12,12 @@ once_cell = "1.0"
 libwebp-sys2 = { version = "0.1.2", features = ["demux", "0_5"] }
 
 [dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 features = ["v1_16"]
 package="gstreamer"
 
 [dependencies.gst-video]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 features = ["v1_16"]
 package="gstreamer-video"
 
@@ -25,7 +25,7 @@ package="gstreamer-video"
 pretty_assertions = "0.7"
 
 [dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.17"
 package="gstreamer-check"
 
 [lib]
