--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -53,7 +53,7 @@ path = "examples/decrypt_example.rs"
 required-features = ["serde", "serde_json", "clap"]
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { version = "0.7.0", path="../../version-helper" }
 
 [features]
 # GStreamer 1.14 is required for static linking
