--- a/video/gif/Cargo.toml
+++ b/video/gif/Cargo.toml
@@ -27,7 +27,7 @@ name = "testvideosrc2gif"
 path = "examples/testvideosrc2gif.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { version = "0.7.0", path="../../version-helper" }
 
 [features]
 # GStreamer 1.14 is required for static linking
