--- a/audio/csound/Cargo.toml
+++ b/audio/csound/Cargo.toml
@@ -28,7 +28,7 @@ name = "csound-effect"
 path = "examples/effect_example.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper = { version = "0.7.0", path = "../../version-helper" }
 
 [features]
 # GStreamer 1.14 is required for static linking
