--- a/tutorial/Cargo.toml
+++ b/tutorial/Cargo.toml
@@ -22,4 +22,4 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../version-helper" }
+gst-plugin-version-helper = { version = "0.7.0", path="../version-helper" }
