--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -8,8 +8,8 @@ license = "MIT"
 edition = "2018"
 
 [dependencies]
-gst = { version = "0.17", features = ["v1_14"], package="gstreamer" }
-gst-base = { version = "0.17", features = ["v1_14"], package = "gstreamer-base" }
+gst = { version = "0.17", package="gstreamer" }
+gst-base = { version = "0.17", package = "gstreamer-base" }
 sodiumoxide = "0.2.1"
 once_cell = "1.3.0"
 hex = "0.4"
