--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -12,8 +12,8 @@ edition = "2018"
 [dependencies]
 bytes = "1.0"
 futures = "0.3"
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 rusoto_core = "0.46"
 rusoto_s3 = "0.46"
 rusoto_credential = "0.46"
