--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -20,6 +20,7 @@ once_cell = "1.0"
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["server"] }
+gst = { package = "gstreamer", version = "0.17", features = ["v1_10"] }
 
 [lib]
 name = "gstreqwest"
