--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 url = "2.1"
 reqwest = { version = "0.11", features = ["cookies", "gzip"] }
 futures = "0.3"
-hyperx = "1.0"
+headers = "0.3"
 mime = "0.3"
 gst = { package = "gstreamer", version = "0.17" }
 gst-base = { package = "gstreamer-base", version = "0.17" }
