fallbackswitch: only drop MISSING_DATA gap events pre queue
Regular gap events can be output by sources such as cefsrc in
normal operation, and should not trigger an active pad change.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/538>

--- a/utils/fallbackswitch/Cargo.toml
+++ b/utils/fallbackswitch/Cargo.toml
@@ -39,6 +39,7 @@ pkg-config = "0.3"
 [features]
 default = ["libc"]
 v1_18 = ["gst-base/v1_18"]
+v1_20 = ["v1_18", "gst/v1_20"]
 # We already use 1.14 which is new enough for static build
 static = []
 
