--- a/text/json/Cargo.toml
+++ b/text/json/Cargo.toml
@@ -32,3 +32,16 @@ package="gstreamer-check"
 default = ["gst/ser_de"]
 # GStreamer 1.14 is required for static linking
 static = ["default", "gst/v1_14"]
+
+[package.metadata.capi]
+min_version = "0.7.0"
+
+[package.metadata.capi.header]
+enabled = false
+
+[package.metadata.capi.library]
+install_subdir = "gstreamer-1.0"
+versioning = false
+
+[package.metadata.capi.pkg_config]
+requires_private = "gstreamer-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
