--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -52,6 +52,7 @@ pkg-config = "0.3.15"
 [features]
 # GStreamer 1.14 is required for static linking
 static = ["gst/v1_14"]
+capi = []
 
 [package.metadata.capi]
 min_version = "0.7.0"
