--- a/text/regex/Cargo.toml
+++ b/text/regex/Cargo.toml
@@ -31,6 +31,7 @@ package="gstreamer-check"
 [features]
 # GStreamer 1.14 is required for static linking
 static = ["gst/v1_14"]
+capi = []
 
 [package.metadata.capi]
 min_version = "0.7.0"
