Add capi feature to all plugin crates
This fixes the build with cargo-c 0.9.2.

--- a/audio/audiofx/Cargo.toml
+++ b/audio/audiofx/Cargo.toml
@@ -33,6 +33,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 
 [features]
 static = []
+capi = []
 
 [package.metadata.capi]
 min_version = "0.8.0"
