--- a/audio/csound/Cargo.toml
+++ b/audio/csound/Cargo.toml
@@ -33,6 +33,7 @@ gst-plugin-version-helper = { path = "../../version-helper" }
 [features]
 # GStreamer 1.14 is required for static linking
 static = ["gst/v1_14"]
+capi = []
 
 [package.metadata.capi]
 min_version = "0.8.0"
