--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,16 @@ include:
 variables:
   FDO_UPSTREAM_REPO: gstreamer/gst-plugins-rs
 
+workflow:
+  rules:
+    - if: $CI_MERGE_REQUEST_IID
+    # don't create a pipeline if its a commit pipeline, on a branch and that branch has
+    # open merge requests (bc we will get a MR build instead)
+    - if: $CI_OPEN_MERGE_REQUESTS
+      when: never
+    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_BRANCH
+
 stages:
   - "prep"
   - "lint"
