video: Add a new ffv1 decoder plugin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "video/cdg",
     "video/closedcaption",
     "video/dav1d",
+    "video/ffv1",
     "video/flavors",
     "video/gif",
     "video/rav1e",
