add uriplaylistbin plugin
uriplaylistbin plays a list of URIs sequentially, ensuring gapless transitions
and proper streams synchronization.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "net/rusoto",
     "utils/fallbackswitch",
     "utils/togglerecord",
+    "utils/uriplaylistbin",
     "video/cdg",
     "video/closedcaption",
     "video/videofx",
@@ -46,6 +47,7 @@ default-members = [
     "net/rusoto",
     "utils/fallbackswitch",
     "utils/togglerecord",
+    "utils/uriplaylistbin",
     "video/cdg",
     "video/ffv1",
     "video/flavors",
