--- a/video/gtk4/Cargo.toml
+++ b/video/gtk4/Cargo.toml
@@ -10,9 +10,9 @@ description = "GTK 4 Sink element and Paintable widget"
 [dependencies]
 gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs" }
 
-gst_video = {package="gstreamer-video", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"}
-gst_base = {package="gstreamer-base", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"}
-gst = {package="gstreamer", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"}
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
+gst_base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst_video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 
 once_cell = "1.0"
 fragile = "1.0.0"
