Add new fmp4 plugin with muxers for ISO fragmented MP4, DASH and CMAF containers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "audio/claxon",
     "audio/csound",
     "audio/lewton",
+    "generic/fmp4",
     "generic/file",
     "generic/sodium",
     "generic/threadshare",
