--- a/deny.toml
+++ b/deny.toml
@@ -7,6 +7,7 @@ notice = "warn"
 ignore = [
     # Waiting for https://github.com/chronotope/chrono/pull/578
     "RUSTSEC-2020-0071",
+    "RUSTSEC-2020-0159",
 ]
 
 [licenses]
