--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT/Apache-2.0"
 description = "Rust HTTP Plugin"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 
 [dependencies]
 url = "2.1"
