--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -7,7 +7,8 @@ authors = ["Arun Raghavan <arun@arunraghavan.net>",
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT/Apache-2.0"
 description = "Amazon Web Services plugin"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 
 [dependencies]
 bytes = "1.0"
