--- a/video/closedcaption/Cargo.toml
+++ b/video/closedcaption/Cargo.toml
@@ -3,7 +3,8 @@ name = "gst-plugin-closedcaption"
 version = "0.8.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>", "Jordan Petridis <jordan@centricular.com>", "Matthew Waters <matthew@centricular.com>"]
 license = "LGPL-2.1-or-later"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 description = "Rust Closed Caption Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 
