--- a/video/ffv1/Cargo.toml
+++ b/video/ffv1/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Arun Raghavan <arun@asymptotic.io>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT/Apache-2.0"
 description = "FFV1 Decoder Plugin"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 
 [dependencies]
 byte-slice-cast = "1"
