--- a/video/hsv/Cargo.toml
+++ b/video/hsv/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.8.0"
 authors = ["Julien Bardagi <julien.bardagi@gmail.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT/Apache-2.0"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 description = "HSV manipulation elements, written in Rust"
 
 [dependencies]
