--- a/video/rspng/Cargo.toml
+++ b/video/rspng/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.8.0"
 authors = ["Natanael Mojica <neithanmo@gmail.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT/Apache-2.0"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 description = "An PNG encoder/decoder written in pure Rust"
 
 [dependencies]
